examples/test/testpolicy12226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12226
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key2: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value35
          key3: value13
          key35: value2
      podSelector:
        matchLabels:
          key49: value49
          key28: value7
          key20: value29
